# aiagent

./: .gitignore  CLERK_AUTHENTICATION_GUIDE.md  READ.md  README.md  arXivsearch.md  post.md
backend/: .env.example  .gitignore  PROJECT_STATUS.md  code.md  folder.md  memory.md  nixpacks.toml  project.md  pyproject.toml  railway.json  requirements.txt  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 3f0d40cb17e8_initial_schema_baseline.py  4ef3bc134723_add_foreign_key_between_linkedin_posts_.py  962de9c9f900_add_linkedin_posts_table.py  beaa2c989792_add_tone_and_target_length_to_.py  c311ff80df94_add_clerk_user_fields_to_user_.py
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  graph.py  linkedin_generator.py  tools.py
backend/app/api/routes/: agent.py  auth.py  linkedin.py
backend/app/database/: connection.py  linkedin_crud.py  models.py
backend/app/middleware/: auth.py
backend/app/services/: user_sync.py
frontend/: .env.example  clerck.md  code.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/components/: ChatInterface.tsx  ChatMessage.tsx  ChatSidebar.tsx  ContactForm.tsx  EmojiPicker.tsx  GoToDashboardButton.tsx  HomeButton.tsx  LinkedInHistorySidebar.tsx  LinkedInPostPreview.tsx  ProjectCard.tsx  Projects.tsx  SignInButton.tsx  ToolActivityIndicator.tsx  UserSync.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts
(+2 files in other folders)
